--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@types/react-dom": "^18.0.8",
     "axios": "^1.3.3",
     "gh-pages": "^4.0.0",
+    "jasmine": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "typescript": "^4.8.4",
