--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-form": "^8.3.10",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.24"
+    "@types/react-redux": "^7.1.24",
+    "@types/redux-form": "^8.3.5"
   }
 }
